add processed data

--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# IUM 25L - Projekt\n",
-    "Analiza danych"
+    "Data analysis"
    ]
   },
   {
@@ -16,11 +16,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
     "\n",
-    "from nocarz.config import DATA_DIR"
+    "from nocarz.config import RAW_DATA_DIR, PROCESSED_DATA_DIR"
    ]
   },
   {
@@ -219,7 +220,7 @@
     }
    ],
    "source": [
-    "users = pd.read_csv(DATA_DIR / \"users.csv\")\n",
+    "users = pd.read_csv(RAW_DATA_DIR / \"users.csv\")\n",
     "users"
    ]
   },
@@ -565,8 +566,8 @@
     }
    ],
    "source": [
-    "dropped_users = users.dropna(subset=['id'])\n",
-    "dropped_users"
+    "processed_users = users.dropna(subset=['id'])\n",
+    "processed_users"
    ]
   },
   {
@@ -587,12 +588,30 @@
    ],
    "source": [
     "total_rows = len(users)\n",
-    "dropped_rows = total_rows - len(dropped_users)\n",
+    "dropped_rows = total_rows - len(processed_users)\n",
     "drop_percentage = (dropped_rows / total_rows) * 100 if total_rows > 0 else 0\n",
     "\n",
     "print(f\"Total rows in original dataset: {total_rows}\")\n",
     "print(f\"Rows dropped due to missing 'id': {dropped_rows}\")\n",
     "print(f\"Percentage of rows dropped: {drop_percentage:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d81d216",
+   "metadata": {},
+   "source": [
+    "Save the processed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "08dbcb7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_users.to_csv(PROCESSED_DATA_DIR / \"users.csv\", index=False)"
    ]
   },
   {
@@ -605,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "c17ce275",
    "metadata": {},
    "outputs": [
@@ -773,13 +792,13 @@
        "[72312 rows x 6 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "reviews = pd.read_csv(DATA_DIR / \"reviews.csv\")\n",
+    "reviews = pd.read_csv(RAW_DATA_DIR / \"reviews.csv\")\n",
     "reviews"
    ]
   },
@@ -793,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "bcfab382",
    "metadata": {},
    "outputs": [
@@ -838,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "963551f6",
    "metadata": {},
    "outputs": [
@@ -931,7 +950,7 @@
        "reviewer_id  9.950773e+07  2.468252e+08  6.675139e+08  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "3560a54c",
    "metadata": {},
    "outputs": [
@@ -1119,19 +1138,19 @@
        "[72312 rows x 6 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dropped_reviews = reviews.dropna(subset=['listing_id', 'id'])\n",
-    "dropped_reviews"
+    "processed_reviews = reviews.dropna(subset=['listing_id', 'id'])\n",
+    "processed_reviews"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "ded1ed54",
    "metadata": {},
    "outputs": [
@@ -1147,7 +1166,7 @@
    ],
    "source": [
     "total_rows = len(reviews)\n",
-    "dropped_rows = total_rows - len(dropped_reviews)\n",
+    "dropped_rows = total_rows - len(processed_reviews)\n",
     "drop_percentage = (dropped_rows / total_rows) * 100 if total_rows > 0 else 0\n",
     "\n",
     "print(f\"Total rows in original dataset: {total_rows}\")\n",
@@ -1165,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e82e8e75",
    "metadata": {},
    "outputs": [
@@ -1630,13 +1649,13 @@
        "[2757 rows x 75 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "listings = pd.read_csv(DATA_DIR / \"listings.csv\")\n",
+    "listings = pd.read_csv(RAW_DATA_DIR / \"listings.csv\")\n",
     "listings"
    ]
   },
@@ -1650,7 +1669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "a7296b2b",
    "metadata": {},
    "outputs": [
@@ -1764,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "22163d39",
    "metadata": {},
    "outputs": [
@@ -2422,7 +2441,7 @@
        "reviews_per_month                             1.260000e+00  1.318000e+01  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2442,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "bc4c692d",
    "metadata": {},
    "outputs": [
@@ -2907,19 +2926,19 @@
        "[2757 rows x 75 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dropped_listings = listings.dropna(subset=['id', 'host_id'])\n",
-    "dropped_listings"
+    "processed_listings = listings.dropna(subset=['id', 'host_id'])\n",
+    "processed_listings"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "1afbe14f",
    "metadata": {},
    "outputs": [
@@ -2934,8 +2953,8 @@
     }
    ],
    "source": [
-    "total_rows = len(listings)\n",
-    "dropped_rows = total_rows - len(dropped_listings)\n",
+    "total_rows = len(processed_listings)\n",
+    "dropped_rows = total_rows - len(processed_listings)\n",
     "drop_percentage = (dropped_rows / total_rows) * 100 if total_rows > 0 else 0\n",
     "\n",
     "print(f\"Total rows in original dataset: {total_rows}\")\n",
@@ -2953,7 +2972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "3567f224",
    "metadata": {},
    "outputs": [
@@ -2967,18 +2986,18 @@
        "Name: property_type, dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dropped_listings['property_type'].describe()"
+    "processed_listings['property_type'].describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "01a32392",
    "metadata": {},
    "outputs": [
@@ -3003,7 +3022,7 @@
     }
    ],
    "source": [
-    "property_type_counts = listings['property_type'].value_counts()\n",
+    "property_type_counts = processed_listings['property_type'].value_counts()\n",
     "\n",
     "print(\"Most common property types:\")\n",
     "print(property_type_counts.head(10))"
@@ -3011,7 +3030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "655515fd",
    "metadata": {},
    "outputs": [
@@ -3047,7 +3066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "9c60e86b",
    "metadata": {},
    "outputs": [
@@ -3285,17 +3304,18 @@
     }
    ],
    "source": [
+    "id_cols = ['id', 'host_id']\n",
     "numerical_cols = ['accommodates', 'bathrooms', 'bedrooms', 'beds', 'price']\n",
     "categorical_cols = ['property_type', 'room_type', 'bathrooms_text', 'neighbourhood', 'name', 'description']\n",
     "\n",
-    "if 'price' in listings.columns and listings['price'].dtype == 'object':\n",
-    "    listings['price'] = listings['price'].replace('[\\$,]', '', regex=True).astype(float)\n",
+    "if 'price' in processed_listings.columns and processed_listings['price'].dtype == 'object':\n",
+    "    processed_listings['price'] = processed_listings['price'].replace('[\\$,]', '', regex=True).astype(float)\n",
     "\n",
     "if numerical_cols:\n",
     "    print(\"Numerical Columns Statistics\")\n",
-    "    numerical_stats = listings[numerical_cols].describe().T\n",
-    "    numerical_stats['missing'] = listings[numerical_cols].isna().sum()\n",
-    "    numerical_stats['missing_percent'] = (listings[numerical_cols].isna().sum() / len(listings) * 100).round(2)\n",
+    "    numerical_stats = processed_listings[numerical_cols].describe().T\n",
+    "    numerical_stats['missing'] = processed_listings[numerical_cols].isna().sum()\n",
+    "    numerical_stats['missing_percent'] = (processed_listings[numerical_cols].isna().sum() / len(processed_listings) * 100).round(2)\n",
     "    display(numerical_stats)\n",
     "\n",
     "if categorical_cols:\n",
@@ -3303,11 +3323,11 @@
     "    cat_info = []\n",
     "\n",
     "    for col in categorical_cols:\n",
-    "        unique_count = listings[col].nunique()\n",
-    "        missing_count = listings[col].isna().sum()\n",
-    "        missing_percent = (missing_count / len(listings) * 100).round(2)\n",
+    "        unique_count = processed_listings[col].nunique()\n",
+    "        missing_count = processed_listings[col].isna().sum()\n",
+    "        missing_percent = (missing_count / len(processed_listings) * 100).round(2)\n",
     "\n",
-    "        value_counts = listings[col].value_counts().head(5)\n",
+    "        value_counts = processed_listings[col].value_counts().head(5)\n",
     "        top_values = \", \".join([f\"{val} ({count})\" for val, count in value_counts.items()])\n",
     "        if len(top_values) > 100:\n",
     "            top_values = top_values[:100] + \"...\"\n",
@@ -3320,6 +3340,45 @@
     "        })\n",
     "\n",
     "    display(pd.DataFrame(cat_info))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f9b6dec",
+   "metadata": {},
+   "source": [
+    "Save the processed data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8418ccdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "processed_listings = processed_listings[categorical_cols + numerical_cols + id_cols]\n",
+    "processed_listings.to_csv(PROCESSED_DATA_DIR / \"listings.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fccfa6ae",
+   "metadata": {},
+   "source": [
+    "Split the dataset into train and test sets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c839c80a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, test_data = train_test_split(processed_listings, test_size=0.2, random_state=42)\n",
+    "train_data.to_csv(PROCESSED_DATA_DIR / \"train.csv\", index=False)\n",
+    "test_data.to_csv(PROCESSED_DATA_DIR / \"test.csv\", index=False)"
    ]
   }
  ],
