add prediction endpoint

--- a/notebooks/base_model.ipynb
+++ b/notebooks/base_model.ipynb
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "bf63a730",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
     "\n",
     "for idx, row in test_data.iterrows():\n",
     "    host_id = row['host_id']\n",
-    "    predictions, data_type = base_model.make_prediction(host_id)\n",
+    "    predictions, data_type = base_model.predict(host_id)\n",
     "\n",
     "    actual_values = row.to_dict()\n",
     "    evaluation = BaseModel.evaluate_predictions(predictions, actual_values)\n",
