update: data columns

--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -3357,7 +3357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "processed_listings = processed_listings[categorical_cols + numerical_cols + id_cols]\n",
+    "processed_listings = processed_listings[id_cols + categorical_cols + numerical_cols]\n",
     "processed_listings.to_csv(PROCESSED_DATA_DIR / \"listings.csv\", index=False)"
    ]
   },
